# RailForge

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.codex/: config.toml  hooks.json
.codex/agents/: backend-evaluator.toml  backend-specialist.toml  clarification-analyst.toml  frontend-evaluator.toml  frontend-specialist.toml  lead-writer.toml
.githooks/: pre-commit
.github/workflows/: build-binaries.yml
docs/architecture/: best-practices.md  ccg-alignment-baseline.md  persistence-recovery-baseline.md  railforge-architecture.md  repo-map.md  testing-matrix.md
docs/guide/: build-and-publish.md  commands.md  faq.md  npm-publish-checklist.md  release-notes.md
installer/: package.json
installer/src/: cli.mjs  commands.mjs  mcp.mjs  menu.mjs
railforge/: __main__.py  cli.py  command_catalog.py  commands.py  openspec_bridge.py
railforge/adapters/: base.py  clarification_analyst_adapter.py  claude_cli_adapter.py  codeagent_wrapper.py  codex_cli_adapter.py  gemini_cli_adapter.py  git.py  hosted_codex_adapter.py  mock.py  playwright.py  role_router.py  shell.py  shell_adapter.py
railforge/application/: __init__.py  bootstrap.py  phase_context.py  runtime_services.py  workflow_commands.py
railforge/artifacts/: __init__.py  loaders.py  store.py  writers.py
railforge/codeagent/: __init__.py  __main__.py  cli.py  compatibility.py  diagnostics.py  models.py  parser.py  service.py  sessions.py  timeouts.py
railforge/context/: __init__.py  assembler.py
railforge/core/: enums.py  errors.py  (+3 more)
scripts/: build_binaries.py  check_boundaries.py
(+192 files in other folders)
